tests/compile-error/src/fake.h
#ifndef FAKE_H
#define FAKE_H

int add(int x, int y);

#endif
